--- a/ReignsMultimedia-Memo/ReignsMultimedia-Memo.csproj
+++ b/ReignsMultimedia-Memo/ReignsMultimedia-Memo.csproj
@@ -216,7 +216,7 @@
     <Resource Include="Assets\Characters\Celina.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Assets\Characters\Cluadia.png">
+    <Resource Include="Assets\Characters\Claudia.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Assets\Characters\Erika.png">
